# xpp

robots/xpp_a1/: CMakeLists.txt  package.xml
robots/xpp_a1/include/xpp_a1/: inverse_kinematics_a1.h
robots/xpp_a1/launch/: a1.launch
robots/xpp_a1/src/: inverse_kinematics_a1.cc
robots/xpp_a1/src/exe/: urdf_visualizer_a1.cc
