<?xml version="1.0"?>

<package format="2">
  <name>xpp_a1</name>
  <version>1.0.10</version>
  <description>
    The URDF file for a A1 to be used with the xpp packages and a 
    simple rviz publisher of a1 tfs.
  </description>
  
  <author email="e.zalyaev@innopolis.ru">Eduard Zalyaev</author>
  <maintainer email="e.zalyaev@innopolis.ru">Eduard Zalyaev</maintainer>
  <license>BSD</license>
  
  <url type="website">http://github.com/leggedrobotics/xpp</url>
  <url type="bugtracker">http://github.com/leggedrobotics/xpp/issues</url>
  
  <buildtool_depend>catkin</buildtool_depend>
  <depend>xacro</depend>
  <depend>roscpp</depend>
  <depend>xpp_vis</depend>
</package>